@@ -87,6 +87,7 @@ v 8.11.5 (unreleased)
   - Fix member expiration date picker after update
   - Fix suggested colors options for new labels in the admin area. !6138
   - Fix GitLab import button
+  - Fix confidential issues being exposed as public using gitlab.com export
 
 v 8.11.4
   - Fix resolving conflicts on forks. !6082
